COR-106 Implement observable set